Progress on styling for React 16 and Bootstrap 4 Network organizations, listen and ignore renders well now. The TinyPosition bar renders well, and the Popover now works. There is an open issue with the organization popovers where the translate3d css moves them partially off the screen ... will tackle tomorrow. Lots of other misc. styling fixes, most of which is captured in _bootstrap3LeftBehind.scss
The "Failed prop type: Invalid prop `outOfBoundaries` of type `boolean`
supplied to `Popover`" warning is still there, it appears to be a known
issue, I'll add a comment to the react-bootstap package.  It doesn't
seem to cause any problems.

voterGuidesToFollowRetrieve is slower than a month ago, and worst case
can take minutes to complete, so testing is tedious.

The WebApp contains a lot of dead and abandoned code, that was copied
from some other  class, often with comments and variable names that no
longer make sense -- copying provides a short term productivity boost,
that is drowned by long term maintainabilty and reliability issues.  We
should really avoid quickly copying classes, it is painful to dig through
it later, and reduces the chances of reuse.  Reuse brings reliability
through well tested components and productivity follows.

Figuring out css and rendering issues becomes many times tougher when
there is so much dead code and outdated variable names, since
you start with rendered styles then try to find them in the code.

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -33,3 +33,9 @@
   margin-bottom: $space-sm;
   margin-right: $space-sm;
 }
+
+.btn_ballot_filter {
+  background-color: white;
+  border-color: darkgrey;
+  color: black;
+}
